[package]
name = "AOC-2015-RS"
version = "1.0.0"
edition = "2021"
authors = ["rhelv"]
default-run = "AOC-2015-RS"

[lib]
proc-macro = true

[profile.dev]
overflow-checks = false

[dependencies]
itertools = "0.10.5"
hashbrown = "0.13.2"
serde_json = "1.0"
rayon = "1.6"

# lib proc-macro dependencies
syn = { version = "1.0.109", features = ["full"] }
quote = "1.0"